[package]
name = "fusion_plus_escrow"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

# Binary target removed to avoid name collision with library target
# [[bin]]
# name = "fusion_plus_escrow"
# path = "src/bin/fusion_plus_escrow.rs"